[package]
name = "cardsup"
version = "1.0.0"
authors = ["Douglas Adams <admin@builtonbits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
log = "0.4.8"
env_logger = "0.7.1"
uuid = "0.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
